[workspace]
members = ["packages/*"]
resolver = "2"

[workspace.package]
authors = ["Rust For Web <info@rustforweb.org>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/RustForWeb/leptos-utils"
version = "0.0.2"

[workspace.dependencies]
leptos = "0.7.0-rc1"

[patch.crates-io]
leptos = { git = "https://github.com/leptos-rs/leptos" }
