[workspace]
members = ["packages/*"]
resolver = "2"

[workspace.package]
authors = ["Rust For Web <info@rustforweb.org>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/RustForWeb/leptos-utils"
version = "0.0.4"

[workspace.dependencies]
leptos = "0.7.2"
leptos-struct-component-macro = { path = "./packages/leptos-struct-component-macro" }
leptos-node-ref = { path = "./packages/leptos-node-ref" }

